# fs-module-manager

./: .env  .gitignore  LICENSE  README.md  docker-compose.dev.yaml  docker-compose.yaml  package.json
backend/: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  ruff.toml
backend/api/: __init__.py  initialization.py  model.py  service.py
backend/api/auth/: controller.py  model.py  service.py
backend/api/v0/: __init__.py
backend/api/v0/routes/auth/: __init__.py  model.py  service.py
backend/api/v0/routes/health/: __init__.py  controller.py  service.py
backend/api/v0/routes/modules/: __init__.py  controller.py  model.py  service.py
backend/api/v0/routes/users/: __init__.py  controller.py  model.py  service.py
backend/db/: __init__.py  initialization.py  initialzation.py  model.py  models.py
backend/tests/: __init__.py  conftest.py  test_api_health.py
backend/tests/api/v0/: test_api_auth.py  test_api_health.py  test_api_module.py  test_api_user.py  test_api_users.py
backend/utils/: __init__.py
backend/utils/database/: __init__.py  model.py
backend/utils/dependency/: __init__.py  initialization.py
backend/utils/development/: __init__.py  initalization.py  service.py
backend/utils/development/mock/: auditlogs.py  modules.py  translation.py  user.py  versions.py
backend/utils/logging/: __init__.py  initialization.py  logger.py  logging_config.json
backend/v0/routes/: __init__.py
backend/v0/routes/health/: controller.py  model.py  service.py
backend/v0/routes/users/: controller.py  model.py  service.py
(+24 files in other folders)
